# Rust-Hackathon-linux-challenge

./: Cargo.toml  LICENSE  README.md  build_solutions.sh  install.sh  test.sh
solutions/: Cargo.toml
solutions/src/: bathroom.rs  classroom.rs  the_door.rs
src/: background_tasks.rs  dirs.rs  errors.rs  file_helpers.rs  files.rs  link.rs  main.rs  main_fs.rs  user_files.rs
src/modules/: bathroom.rs  classroom.rs  correct_order.rs  find_the_suid.rs  kill_them_all.rs  many_open.rs  mod.rs  start_mod.rs
src/special_files/: mod.rs  text_file.rs  trigger_file.rs
